--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,117 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-4.83MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 20120, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-451.3KB/s(Youtube:不良林), server: ingress-i1.onebox6.org, port: 38701, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: ingress-i1.onebox6.org}}
-  - {name: 🇸🇬 新加坡-1.96MB/s(Youtube:不良林), server: sg1.jjzgy.live, port: 32333, type: trojan, password: 1c3dd378-6dc3-3a81-8461-ae927cd6fb7c, sni: sg1.jjzgy.live, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.81MB/s(Youtube:不良林), server: 106.75.233.91, port: 3389, type: trojan, password: a170b44c2dfac9e6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.27MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇯🇵 日本-1.45MB/s(Youtube:不良林), server: 164.70.68.67, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林), server: 141.98.168.251, port: 443, type: trojan, password: LiX1tV, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.82MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 33001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.37MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 捷克-987.6KB/s(Youtube:不良林), server: 195.133.53.192, port: 14369, type: vmess, uuid: 2331affa-1194-45ae-9457-3746120c4751, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇫🇷 法国-599.3KB/s(Youtube:不良林), server: 51.38.118.42, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.44MB/s(Youtube:不良林), server: 43.129.30.122, port: 42567, type: vmess, uuid: 7744b0d0-3cae-4ba4-d44d-2a2869ef4eea, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
+  - {name: 🇰🇷 韩国-2.80MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-7.65MB/s(Youtube:不良林), server: jpcu.dfnode.top, port: 30004, type: vmess, uuid: a6ef37c5-1a0f-3204-8ca6-fa7a18c062c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v2ray, ws-headers: {Host: jpcu.dfnode.top}}
+  - {name: 🇯🇵 日本-3.87MB/s(Youtube:不良林), server: jgwdb4.gaox.ml, port: 443, type: trojan, password: d06a3f01-1ff0-4792-9b8e-a5a604bc74a2, sni: jgwdb4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇭🇰 香港-3.06MB/s(Youtube:不良林), server: 43.129.30.122, port: 15256, type: vmess, uuid: 02ee559e-a1aa-427e-e42b-f97977795dbc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.41MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +131,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-4.83MB/s(Youtube:不良林)
-      - 🇨🇳 中国-451.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.96MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.81MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.45MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-1.40MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.82MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.37MB/s(Youtube:不良林)
-      - 捷克-987.6KB/s(Youtube:不良林)
+      - 🇫🇷 法国-599.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
+      - 🇭🇰 (已存活1天)香港-3.16MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.80MB/s(Youtube:不良林)
+      - 🇨🇳 中国-7.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.87MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.06MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.41MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
