--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,68 +5,67 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇺🇸 美国-1.81MB/s(Youtube:不良林), server: 134.195.101.32, port: 3389, type: trojan, password: d66013c645b93c5c, skip-cert-verify: true}
   - {name: 🇨🇳 中国-359.4KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-1.51MB/s(Youtube:不良林), server: 80.78.132.177, port: 28443, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-2.52MB/s(Youtube:不良林), server: bai-piao-wang-zhe.hk2.jackson2025.cf, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: bai-piao-wang-zhe.hk2.jackson2025.cf}}
-  - {name: 🇸🇬 新加坡-1.49MB/s(Youtube:不良林), server: s4.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s4.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.12MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20060, type: trojan, password: 841b229a-304f-46a2-a0fe-3b4e3e0e44f6, sni: gzyd1.52147.top, skip-cert-verify: true}
   - {name: 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林), server: 47.243.31.8, port: 51657, type: vmess, uuid: f0eb8855-d3a4-4fc4-98b6-711681c756b8, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.31.8]}}}
-  - {name: 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇨🇳 中国-4.73MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32000, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.19MB/s(Youtube:不良林), server: jgwld3.gaox.ml, port: 443, type: trojan, password: 71b55a84-3fac-4458-abff-eaad79219c91, sni: jgwld3.gaox.ml, skip-cert-verify: true}
   - {name: 🇨🇳 中国-3.83MB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-458.8KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 捷克-803.2KB/s(Youtube:不良林), server: 195.133.53.192, port: 43688, type: vmess, uuid: bd1c8b57-0a9e-4e9f-a261-48e90c871e41, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 195.133.53.192}}
+  - {name: 🇳🇱 荷兰-449.3KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-1.17MB/s(Youtube:不良林), server: jgwhdlb2.gaox.ml, port: 443, type: trojan, password: 54080134-2cba-4535-8599-95650bd9aa54, sni: jgwhdlb2.gaox.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
@@ -74,47 +73,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇺🇸 美国-1.81MB/s(Youtube:不良林)
       - 🇨🇳 中国-359.4KB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.51MB/s(Youtube:不良林)
-      - 🇭🇰 香港-2.52MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.49MB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.12MB/s(Youtube:不良林)
       - 🇭🇰 (已存活1天)香港-4.39MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-308.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.73MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.19MB/s(Youtube:不良林)
       - 🇨🇳 中国-3.83MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.8KB/s(Youtube:不良林)
       - 捷克-803.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-449.3KB/s(Youtube:不良林)
+      - 🇮🇳 印度-1.17MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
